Fixed wrapping issue

--- a/client/portal/include/nav.css
+++ b/client/portal/include/nav.css
@@ -27,6 +27,7 @@ nav .actions {
 
 .fixedScroll {
 	position: fixed;
+	width: inherit;
 }
 
 nav h2 {
